@@ -1,0 +1,2 @@
+(fn milliseconds-since-1970 ()
+  ((new *date).get-time))
