@@ -1,2 +1,0 @@
-(fn nanotime ()     ; TODO: Use MILLISECONDS-SINCE-1970 instead.
-  (* 1000 ((new *date).get-time)))
