@@ -4,9 +4,10 @@
 (load "tre_modules/l10n/compile-time.lisp")
 
 (make-project "PHP server"
-              `("tre_modules/php/json.lisp"
-                "tre_modules/php/log-message.lisp"
-                "tre_modules/php/milliseconds-since-1970.lisp"
+              `(
+                ,@(list+ "tre_modules/php/"
+                         `("json.lisp"
+                           "log-message.lisp"))
                 "tre_modules/php-db-mysql/main.lisp"
                 "tre_modules/php-http-request/main.lisp"
                 ,@(list+ "tre_modules/l10n/"
