@@ -4,10 +4,10 @@
 (load "tre_modules/l10n/compile-time.lisp")
 
 (make-project "tré PHP only project"
-              `("tre_modules/php/json.lisp"
-                "tre_modules/php/log-message.lisp"
-                "tre_modules/php/milliseconds-since-1970.lisp"
-                "tre_modules/php/server-name.lisp"
+              `(,@(list+ "tre_modules/php/"
+                         `("json.lisp"
+                           "log-message.lisp"
+                           "server-name.lisp"))
                 "tre_modules/php-db-mysql/main.lisp"
                 "tre_modules/php-http-request/main.lisp"
                 ,@(list+ "tre_modules/l10n/"
