@@ -4,6 +4,8 @@ Changes relative to tre-0.18:
   * DEFINE-GENSYM-GENERATOR -> DEF-GENSYM.
   * CL: NANOTIME replaced by MILLISECONDS-SINCE-1970, albeit
     with precision of seconds only.
+  * JS/PHP: MILLISECONDS-SINCE-1970 moved here from modules
+    "js" and "php".
 
 Changes of tre-0.18 relative to tre-0.17:
   * Slightly improved optimizer.
